Test/String/GetOp.expected
Test/String/GetOp.lean:4:2: error: cannot translate 0
